--- a/css/style.css
+++ b/css/style.css
@@ -61,12 +61,13 @@ p {
     text-align: justify;
     text-indent: 1.5em;
 }
+p a:hover {color: #eaebf0;text-decoration: none; font-weight: bold;}
 a {color:inherit;}
 br{line-height: 15px}
 ::-webkit-scrollbar-track {background-color: #e9edf0;border-left: 1px solid #ededed;}
-::-webkit-scrollbar {width: 7px;background-color: #385aef;}
-::-webkit-scrollbar-thumb {background: #385aef;}
-a:hover, a:active {color: #385aef;text-decoration: none;}
+::-webkit-scrollbar {width: 7px;background-color: #000000;}
+::-webkit-scrollbar-thumb {background: #000000;}
+a:hover, a:active {color: #000000;text-decoration: none;}
 a:focus, a:active, button:focus, button:active, .btn.active.focus, .btn.active:focus, .btn.focus, .btn:active.focus, .btn:active:focus, .btn:focus {outline: none;text-decoration: none}
 .form-control::placeholder {color: #c2c2c2;opacity: 1;}  .form-control:-ms-input-placeholder {color: #c2c2c2;}  .form-control::-ms-input-placeholder {color: #c2c2c2;}
 a, *::before, *::after, img, span, input, button, .navbar, .fixedmenu, .tp-bullet, .owl-dot, .owl-prev, .owl-next {transition: ease-in-out 0.2s;-webkit-transition: ease-in-out 0.2s;-moz-transition: ease-in-out 0.2s;-ms-transition: ease-in-out 0.2s;-o-transition: ease-in-out 0.2s;}
@@ -75,7 +76,7 @@ ul{list-style: none;padding: 0; margin: 0;}
 img {max-width: 100%}
 section,.section-padding {position: relative;padding: 7.5rem 0;overflow: hidden;}
 .section-top-margin{margin-top: 7.5rem;}
-.h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6 {line-height: 1; font-family: 'Poppins', sans-serif; margin-bottom: 0;}
+.h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6 {line-height: 1.5; font-family: 'Poppins', sans-serif; margin-bottom: 0; text-align: center;}
 .btn.focus, .btn:focus{box-shadow: none;}
 a {text-decoration: none;}
 .form-group {margin-bottom: 1rem;}
@@ -2690,7 +2691,7 @@ ul.packages li i.fa-times{
 }
 
 .footer-social li a:hover{
-    background-color:#00bcd4;
+    background-color:#000000;
     color: #ffffff;
 }
 
