--- a/css/style.css
+++ b/css/style.css
@@ -2199,10 +2199,36 @@ ul.packages li i.fa-times{
     background: url(../images/slider-image3.jpg);
 }
 
-@media only screen and (max-width: 550px) 
-                    and (device-width: 414px) 
-                    and (device-height: 896px) 
-                    and (-webkit-device-pixel-ratio: 3) {
+@media only screen and (device-width: 375px) and (device-height: 812px) and (-webkit-device-pixel-ratio: 2) {
+    .tp-bgimgheader {
+    background-attachment: fixed !important;
+    background-color: rgba(0, 0, 0, 0) !important;
+      background-repeat: no-repeat  !important;
+      background-image: url(/images/mobile/home/slider/header.jpg) !important;
+      background-size: cover  !important;
+      background-position: center center  !important; 
+      width: 100% !important;
+      height: 100% !important;    ;
+      opacity: 1 !important;
+      visibility: inherit !important;
+      z-index: 20 !important; 
+  }
+   .tp-bgimgbox_otl {
+    background-attachment: fixed !important;
+    background-color: rgba(0, 0, 0, 0) !important;
+      background-repeat: no-repeat  !important;
+      background-image: url(/images/mobile/home/slider/box_otl.jpg) !important;
+      background-size: cover  !important;
+      background-position: center center  !important; 
+      width: 100% !important;
+      height: 100% !important;    ;
+      opacity: 1 !important;
+      visibility: inherit !important;
+      z-index: 20 !important; 
+  }  
+}
+
+@media only screen and (max-width: 550px) {
   .tp-bgimgheader {
     background-attachment: fixed !important;
     background-color: rgba(0, 0, 0, 0) !important;
