--- a/css/style.css
+++ b/css/style.css
@@ -418,12 +418,6 @@ header a.logo img {max-height:35px; max-width: 100px;vertical-align: sub;}
     display: none !important;
 }
 
-@media (max-width: 992px) {
-  .sidemenu_btn {
-    display:inline-block !important;
-  }
-}
-
 .navbar-simple .navbar-nav .nav-link{
     padding: 0.4rem 1.5rem;
     margin-left:.5rem;
@@ -2199,34 +2193,6 @@ ul.packages li i.fa-times{
     background: url(../images/slider-image3.jpg);
 }
 
-@media only screen and (max-width: 550px) {
-  .tp-bgimgheader {
-    background-attachment: fixed !important;
-    background-color: rgba(0, 0, 0, 0) !important;
-      background-repeat: no-repeat  !important;
-      background-image: url(/images/mobile/home/slider/header.jpg) !important;
-      background-size: cover  !important;
-      background-position: center center  !important; 
-      width: 100% !important;
-      height: 100% !important;    ;
-      opacity: 1 !important;
-      visibility: inherit !important;
-      z-index: 20 !important; 
-  }
-   .tp-bgimgbox_otl {
-    background-attachment: fixed !important;
-    background-color: rgba(0, 0, 0, 0) !important;
-      background-repeat: no-repeat  !important;
-      background-image: url(/images/mobile/home/slider/box_otl.jpg) !important;
-      background-size: cover  !important;
-      background-position: center center  !important; 
-      width: 100% !important;
-      height: 100% !important;    ;
-      opacity: 1 !important;
-      visibility: inherit !important;
-      z-index: 20 !important; 
-  }  
-} 
 /* ===================================
     Side Menu
 ====================================== */
@@ -3823,10 +3789,6 @@ ul.count_down.white li p:nth-child(2) {
     Media Queries
 ====================================== */
 
-@media screen and (min-width: 1610px){
-
-}
-
 @media (min-width: 1400px){
     .container, .container-lg, .container-md, .container-sm, .container-xl {
         max-width: 1140px;
@@ -3900,6 +3862,7 @@ ul.count_down.white li p:nth-child(2) {
     }
 
     .sidemenu_btn{
+        display:inline-block !important;
         position: relative;
         right: 0;
         margin: 0;
@@ -4224,8 +4187,7 @@ ul.count_down.white li p:nth-child(2) {
 
 }
 
-
-    @media screen and (max-width:576px){
+@media screen and (max-width:576px){
 
     .laptop-img{
         width: 400px;
@@ -4310,13 +4272,39 @@ ul.count_down.white li p:nth-child(2) {
 }
 
 
+@media only screen and (max-width: 550px) {
+  .tp-bgimgheader {
+    background-color: rgba(0, 0, 0, 0) !important;
+    background-repeat: no-repeat  !important;
+    background-image: url(/images/mobile/home/slider/header.jpg) !important;
+    background-size: cover !important;
+    background-position: center center !important; 
+    width: 100% !important;
+    height: 100% !important;
+    opacity: 1 !important;
+    visibility: inherit !important;
+    z-index: 20 !important; 
+      
+  }
+   .tp-bgimgbox_otl {
+    background-color: rgba(0, 0, 0, 0) !important;
+    background-repeat: no-repeat  !important;
+    background-image: url(/images/mobile/home/slider/box_otl.jpg) !important;
+    background-size: cover !important;
+    background-position: center center !important; 
+    width: 100% !important;
+    height: 100% !important;
+    opacity: 1 !important;
+    visibility: inherit !important;
+    z-index: 20 !important; 
+  }  
+} 
+
 
 @media screen and (max-width:466px){
-
     .laptop-img{
         width: 320px;
     }
-
     #laptop-slide {
         width: 175px;
         height: 110px;
@@ -4346,10 +4334,6 @@ ul.count_down.white li p:nth-child(2) {
     .blog-comment .avatar {
         width: 70px;
     }
-}
-
-
-@media only screen and (max-width : 466px){
     .rev_slider .caption, .rev_slider .tp-caption p{
         line-height: 1.2 !important;
         letter-spacing:.5px !important;
